--- a/css/style.css
+++ b/css/style.css
@@ -7635,7 +7635,8 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: calc(100vh);
+  /*height: calc(100vh);*/
+  height: 700px;
   min-height: 700px;
   position: relative; }
   .slider-item:before {
