--- a/css/style.css
+++ b/css/style.css
@@ -7620,6 +7620,25 @@ header {
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
+   position: relative;
+  }
+
+  .home-slider:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 2;
+  }
+
+  .owl-stage-outer,
+  .owl-nav,
+  .owl-dots {
+    z-index: 3;
   }
 
 .inner-page .slider-item {
