--- a/css/style.css
+++ b/css/style.css
@@ -7616,7 +7616,7 @@ header {
     bottom: -30px !important;
     position: relative; }
   .home-slider {
-   background-image: url("../images/slides/slide1.png");
+   background-image: url("../images/slides/slide1.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
