--- a/css/style.css
+++ b/css/style.css
@@ -8352,3 +8352,9 @@ header {
   opacity: 1;
   visibility: visible;
 }
+
+.pilares-bg {
+  background-image: url('../images/slides/slide1.jpg'); 
+  background-attachment: fixed;     
+  background-position: -25vw;
+}
