--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #fd5f00;
+  --primary: #062B74;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -140,7 +140,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #fd5f00;
+  color: #062B74;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
@@ -2024,8 +2024,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #fd5f00;
-  border-color: #fd5f00; }
+  background-color: #062B74;
+  border-color: #062B74; }
   .btn-primary:hover {
     color: #fff;
     background-color: #d75100;
@@ -2035,8 +2035,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(253, 95, 0, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #fd5f00;
-    border-color: #fd5f00; }
+    background-color: #062B74;
+    border-color: #062B74; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -2223,25 +2223,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .btn-outline-primary {
-  color: #fd5f00;
+  color: #062B74;
   background-color: transparent;
   background-image: none;
-  border-color: #fd5f00; }
+  border-color: #062B74; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #fd5f00;
-    border-color: #fd5f00; }
+    background-color: #062B74;
+    border-color: #062B74; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 95, 0, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(253, 95, 0, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #fd5f00;
+    color: #062B74;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #fd5f00;
-    border-color: #fd5f00; }
+    background-color: #062B74;
+    border-color: #062B74; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 95, 0, 0.5);
@@ -2424,7 +2424,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #fd5f00;
+  color: #062B74;
   background-color: transparent; }
   .btn-link:hover {
     color: #b14200;
@@ -2644,7 +2644,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #fd5f00; }
+    background-color: #062B74; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2919,7 +2919,7 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    background-color: #fd5f00; }
+    background-color: #062B74; }
   .custom-control-input:focus ~ .custom-control-label::before {
     -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(253, 95, 0, 0.25);
     box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(253, 95, 0, 0.25); }
@@ -2964,13 +2964,13 @@ input[type="button"].btn-block {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #fd5f00; }
+  background-color: #062B74; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #fd5f00; }
+  background-color: #062B74; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
@@ -2985,7 +2985,7 @@ input[type="button"].btn-block {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #fd5f00; }
+  background-color: #062B74; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
@@ -3105,7 +3105,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #fd5f00;
+    background-color: #062B74;
     border: 0;
     border-radius: 1rem;
     -webkit-appearance: none;
@@ -3127,7 +3127,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #fd5f00;
+    background-color: #062B74;
     border: 0;
     border-radius: 1rem;
     -moz-appearance: none;
@@ -3148,7 +3148,7 @@ input[type="button"].btn-block {
   .custom-range::-ms-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #fd5f00;
+    background-color: #062B74;
     border: 0;
     border-radius: 1rem;
     appearance: none; }
@@ -3221,7 +3221,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #fd5f00; }
+  background-color: #062B74; }
 
 .nav-fill .nav-item {
   -webkit-box-flex: 1;
@@ -3280,7 +3280,7 @@ input[type="button"].btn-block {
   line-height: inherit;
   white-space: nowrap;
   width: 100%;
-  max-width: 130px; 
+  max-width: 200px;
 }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none;
@@ -3858,7 +3858,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #fd5f00;
+  color: #062B74;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -3887,8 +3887,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #fd5f00;
-  border-color: #fd5f00; }
+  background-color: #062B74;
+  border-color: #062B74; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3947,7 +3947,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #fd5f00; }
+  background-color: #062B74; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
     color: #fff;
     text-decoration: none;
@@ -4153,7 +4153,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #fd5f00;
+  background-color: #062B74;
   -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease; }
@@ -4232,8 +4232,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #fd5f00;
-    border-color: #fd5f00; }
+    background-color: #062B74;
+    border-color: #062B74; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -4942,7 +4942,7 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #fd5f00 !important; }
+  background-color: #062B74 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -5042,7 +5042,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #fd5f00 !important; }
+  border-color: #062B74 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -7146,8 +7146,11 @@ button.bg-dark:focus {
 .text-white {
   color: #fff !important; }
 
+/* .text-primary {
+  color: #062B74 !important; } */
+
 .text-primary {
-  color: #fd5f00 !important; }
+    color: #062B74 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #ca4c00 !important; }
@@ -7331,7 +7334,7 @@ textarea.form-control {
     font-size: 12px; }
   .btn.btn-outline-primary {
     border-width: 2px;
-    color: #fd5f00; }
+    color: #062B74; }
     .btn.btn-outline-primary:hover, .btn.btn-outline-primary:focus, .btn.btn-outline-primary:active {
       color: #fff; }
   .btn.btn-outline-white {
@@ -7369,7 +7372,7 @@ header {
         header .navbar-brand.absolute {
           position: relative; } }
     header .navbar-brand span {
-      color: #fd5f00; }
+      color: #062B74; }
   header .navbar {
     padding-top: 0;
     padding-bottom: 0;
@@ -7378,7 +7381,6 @@ header {
     font-family: "Montserrat", sans-serif; }
     @media (max-width: 1199.98px) {
       header .navbar {
-        background: black !important;
         padding-top: .5rem;
         padding-bottom: .5rem; } }
     header .navbar .nav-link {
@@ -7415,16 +7417,16 @@ header {
           header .navbar .dropdown-menu:before {
             display: none; } }
       header .navbar .dropdown-menu .dropdown-item:hover {
-        background: #fd5f00;
+        background: #062B74;
         color: #fff; }
       header .navbar .dropdown-menu .dropdown-item.active {
-        background: #fd5f00;
+        background: #062B74;
         color: #fff; }
       header .navbar .dropdown-menu a {
         padding-top: 7px;
         padding-bottom: 7px; }
     header .navbar .cta-btn a {
-      background: #fd5f00;
+      background: #062B74;
       color: #000 !important;
       padding-left: 20px !important;
       padding-right: 20px !important;
@@ -7479,7 +7481,7 @@ header {
 
 .section-heading .small-sub-heading {
   font-size: 14px;
-  color: #fd5f00; }
+  color: #062B74; }
 
 .blog .media h3 {
   font-size: 20px;
@@ -7499,7 +7501,7 @@ header {
 
 .custom-icon {
   font-size: 70px;
-  color: #fd5f00; }
+  color: #062B74; }
 
 /* Owl Carousel */
 .home-slider {
@@ -7702,7 +7704,7 @@ header {
       color: white;
       margin: 0 auto; }
       .slider-item .slider-text p a {
-        color: #fd5f00;
+        color: #062B74;
         text-decoration: underline; }
         .slider-item .slider-text p a:hover {
           color: #fff;
@@ -7740,7 +7742,7 @@ header {
     position: relative;
     width: 0px;
     font-size: 30px;
-    color: #fd5f00; }
+    color: #062B74; }
 
 .load-more {
   display: block;
@@ -7750,7 +7752,7 @@ header {
   color: #000;
   font-size: 20px; }
   .load-more:hover {
-    background: #fd5f00;
+    background: #062B74;
     color: #fff; }
 
 .cover_1 {
@@ -7780,7 +7782,7 @@ header {
       -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
       transform: translateX(-50%);
-      background: #fd5f00; }
+      background: #062B74; }
 
 .text-black {
   color: #000 !important; }
@@ -7804,7 +7806,7 @@ header {
   font-size: 15px; }
   .media-feature .icon {
     font-size: 60px;
-    color: #fd5f00; }
+    color: #062B74; }
   .media-feature h3 {
     font-size: 16px;
     text-transform: uppercase; }
@@ -7815,7 +7817,7 @@ header {
     -ms-transform: scale(1.05);
     transform: scale(1.05);
     z-index: 2;
-    border-bottom: 10px solid #fd5f00; }
+    border-bottom: 10px solid #062B74; }
 
 .media-custom {
   background: #fff;
@@ -7894,7 +7896,7 @@ header {
   .site-footer p:last-child {
     margin-bottom: 0; }
   .site-footer a {
-    color: #fd5f00;
+    color: #062B74;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
     .site-footer a:hover {
       color: #000;
@@ -8023,7 +8025,7 @@ header {
     .block-41 .block-41-subheading > div.block-41-line {
       height: 2px;
       width: 50px;
-      background: #fd5f00; }
+      background: #062B74; }
 
 .block-41 .block-41-heading {
   font-size: 50px;
@@ -8049,7 +8051,7 @@ header {
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background: #fd5f00;
+        background: #062B74;
         z-index: -1; }
   .block-6.d-block .icon {
     margin-right: 0; }
@@ -8247,9 +8249,13 @@ header {
 .feature-1 {
   padding: 30px;
   background: #f8f9fa;
-  min-height: calc(32.80% - 15px);
+  height: 50%;
   top: 0;
-  margin-bottom: 30px !important; }
+}
+
+.feature-1:first-child {
+  margin-bottom: 2rem;
+}
   @media (max-width: 991.98px) {
     .feature-1 {
       display: block !important; } }
@@ -8318,7 +8324,7 @@ header {
 
 #button {
   display: inline-block;
-  background-color: #fd5f00;
+  background-color: #062B74;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -8353,8 +8359,24 @@ header {
   visibility: visible;
 }
 
+#clientes {
+  margin-bottom: 4rem;
+}
+
 .pilares-bg {
   background-image: url('../images/slides/slide1.jpg'); 
   background-attachment: fixed;     
   background-position: -25vw;
+}
+
+@media (max-width: 991.98px) {
+  #pilares {
+    padding-top: 2rem;
+  }
+  #pilares > .container-fluid > .row.mb-5 {
+    margin-bottom: 1rem !important;
+  }
+  .feature-img-bg {
+    display: none;
+  }
 }
