Segunda tanda de correcciones - Work in progress

--- a/css/style.css
+++ b/css/style.css
@@ -3282,6 +3282,15 @@ input[type="button"].btn-block {
   width: 100%;
   max-width: 200px;
 }
+
+@media (max-width: 991.98px) {
+  .navbar-brand {
+    padding: 0;
+    margin: 0;
+    max-width: 150px;
+  }
+}
+
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none;
   
@@ -3586,7 +3595,7 @@ input[type="button"].btn-block {
   border-color: rgba(255, 255, 255, 0.1); }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
 
 .navbar-dark .navbar-text {
   color: rgba(255, 255, 255, 0.5); }
@@ -8363,10 +8372,14 @@ header {
   margin-bottom: 4rem;
 }
 
+#contacto {
+  padding: 4em 0;
+}
+
 .pilares-bg {
-  background-image: url('../images/slides/slide1.jpg'); 
-  background-attachment: fixed;     
-  background-position: -25vw;
+  background-image: url('../images/about_1.jpg'); 
+  /* background-attachment: fixed;     
+  background-position: -25vw; */
 }
 
 @media (max-width: 991.98px) {
