--- a/css/style.css
+++ b/css/style.css
@@ -7632,12 +7632,7 @@ header {
     position: relative; }
 
 
-  .home-slider:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  .home-slider-wrapper {
    background-image: url("../images/slides/slide1.jpg");
    background-size: cover;
    background-position: center;
