--- a/css/style.css
+++ b/css/style.css
@@ -8412,3 +8412,8 @@ header {
     display: none;
   }
 }
+
+.owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
+  -ms-touch-action: auto;
+      touch-action: auto;
+}
