--- a/css/style.css
+++ b/css/style.css
@@ -8395,6 +8395,9 @@ header {
   display: none;
 }
 
+#clientes .clientes-desktop .cliente-slide {
+  max-width: 365px;
+}
 
 #contacto {
   padding: 4em 0;
@@ -8433,4 +8436,10 @@ header {
 .owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
   -ms-touch-action: auto;
       touch-action: auto;
+}
+
+.brand-footer {
+  width: 100%;
+  max-width: 150px;
+  margin: 0 auto;
 }
