--- a/css/style.css
+++ b/css/style.css
@@ -7632,7 +7632,7 @@ header {
     position: relative; }
 
     .home-slider-wrapper {
-      padding-top: 122.75px;
+      padding-top: 75px;
       position: relative;
       overflow: hidden;
     }
@@ -8389,13 +8389,17 @@ header {
 }
 
 .header-nav {
-  padding: 1rem 0;
+  min-height: 75px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
 }
+
+.header-nav .navbar-brand img {
+  max-width: 105px;
+} 
 
 #clientes {
   margin-bottom: 4rem;
@@ -8430,6 +8434,9 @@ header {
 }
 
 @media (max-width: 768px) {
+  .header-nav {
+    padding-top: 10px;
+  }
   #clientes .clientes-mobile {
     display: block;
   }
